[CSS] css padding and overflow fixes

--- a/src/Blog.css
+++ b/src/Blog.css
@@ -1,7 +1,7 @@
 .pageContainer {
   display: flex;
   justify-content: center;
-  margin-top: 28px;
+  margin-top: 24px;
   margin-bottom: 40px;
 }
 
@@ -12,7 +12,7 @@
 
   position: sticky;
   position: -webkit-sticky;
-  top: 28px;
+  top: 24px;
 }
 
 .mobilePageContainer {
