--- a/src/components/ContentColumn/Article.module.css
+++ b/src/components/ContentColumn/Article.module.css
@@ -83,7 +83,7 @@
 
   gap: 4px;
   width: 100%;
-  overflow: scroll;
+  overflow: auto;
   margin-bottom: 6px;
 }
 
