--- a/src/components/MenuBar/MenuBar.module.css
+++ b/src/components/MenuBar/MenuBar.module.css
@@ -4,7 +4,8 @@
   text-align: center;
 
   min-width: 240px;
-  margin: 16px;
+  overflow: auto;
+  margin: 0px 16px;
 }
 
 .dropdownContainer {
@@ -20,6 +21,7 @@
 
 .menu:hover {
   cursor: pointer;
+  background-color: #20829b;
 }
 
 a {
